--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -9,6 +9,7 @@
   padding: 0;
   overflow: hidden;
   will-change: width;
+  z-index: 10;
 }
 
 .sideBarHeader {
@@ -37,8 +38,8 @@
 }
 
 .cartItem {
-  padding: 10px 0;
   border-bottom: 1px solid #ddd;
+  padding: 10px 0;
 }
 
 .quantityRow {
@@ -49,11 +50,13 @@
 }
 
 .cartFooter {
-  position: sticky;
-  bottom: 10px;
-  background: lightgray;
-  border-top: 1px solid #cfcfcf;
+  border-top: 1px solid #ccc;
+  background: #f4f4f4;
   padding: 12px 16px;
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .totalRow {
