--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -65,6 +65,7 @@
   color: #000000;
   text-decoration: none;
   display: block;
+  text-transform: capitalize;
 }
 .dropdownItem a:hover {
   color: #ffffff;
